use XGB instead | CV 0.86

--- a/binary_rainfall_prediction/train.ipynb
+++ b/binary_rainfall_prediction/train.ipynb
@@ -2544,7 +2544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2555,7 +2555,7 @@
     "    ], remainder='passthrough'\n",
     ")\n",
     "\n",
-    "classifier = DecisionTreeClassifier()\n",
+    "classifier = XGBClassifier()\n",
     "\n",
     "pipe = Pipeline(\n",
     "    steps=[\n",
@@ -2567,24 +2567,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "count    3.000000\n",
-       "mean    -0.720754\n",
-       "std      0.019428\n",
-       "min     -0.737308\n",
-       "25%     -0.731448\n",
-       "50%     -0.725588\n",
-       "75%     -0.712476\n",
-       "max     -0.699365\n",
+       "mean    -0.866040\n",
+       "std      0.019766\n",
+       "min     -0.888796\n",
+       "25%     -0.872489\n",
+       "50%     -0.856181\n",
+       "75%     -0.854662\n",
+       "max     -0.853143\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
