extend gridsearch params | CV 0.89

--- a/binary_rainfall_prediction/train.ipynb
+++ b/binary_rainfall_prediction/train.ipynb
@@ -132,7 +132,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "7ecc14f3-baed-4cf5-bb75-4eaca8db276b",
+       "ref": "c7e601e0-4578-4aa2-913e-8bf5c6c17269",
        "rows": [
         [
          "0",
@@ -1205,7 +1205,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d206e2e8-dc7b-4887-a0be-0521cc5a2fb5",
+       "ref": "462f667a-5621-4650-82cd-b93f61aa5cf8",
        "rows": [
         [
          "0",
@@ -1587,7 +1587,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "64892d52-1bf0-41c9-aa79-0453e2ce2349",
+       "ref": "dcdb6b8a-0870-4c1b-a6bf-f17c3d390e6f",
        "rows": [
         [
          "0",
@@ -2574,13 +2574,13 @@
      "data": {
       "text/plain": [
        "count    5.000000\n",
-       "mean    -0.870617\n",
+       "mean     0.870617\n",
        "std      0.014476\n",
-       "min     -0.886364\n",
-       "25%     -0.885101\n",
-       "50%     -0.867565\n",
-       "75%     -0.857997\n",
-       "max     -0.856061\n",
+       "min      0.856061\n",
+       "25%      0.857997\n",
+       "50%      0.867565\n",
+       "75%      0.885101\n",
+       "max      0.886364\n",
        "dtype: float64"
       ]
      },
@@ -2600,7 +2600,7 @@
     ")\n",
     "\n",
     "errors_tree_regressor = pd.Series(\n",
-    "    -cv_results[\"test_score\"]\n",
+    "    cv_results[\"test_score\"]\n",
     ")\n",
     "errors_tree_regressor.describe()"
    ]
@@ -2615,7 +2615,12 @@
     "cv_search = GridSearchCV(\n",
     "    estimator = pipe,\n",
     "    param_grid={\n",
-    "        'classifier__n_estimators':[100, 50, 10],\n",
+    "        'classifier__n_estimators':[10, 50, 100, 500],\n",
+    "        'classifier__max_depth':[10, 50, 100],\n",
+    "        'classifier__max_leaves':[0, 5, 10],\n",
+    "        'classifier__learning_rate':[1e-3, 5e-3, 10e-3],\n",
+    "        'classifier__subsample':[0.7, 0.8, 0.9],\n",
+    "        'classifier__colsample_bytree':[0.7, 0.8, 0.9],\n",
     "        # 'classifier__criterion':['squared_error', 'friedman_mse', 'poisson'],\n",
     "    },\n",
     "    scoring=\"roc_auc\",\n",
@@ -2636,10 +2641,35 @@
     {
      "data": {
       "text/plain": [
-       "{'classifier__n_estimators': 10}"
+       "np.float64(0.8915123456790124)"
       ]
      },
      "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_search.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'classifier__colsample_bytree': 0.7,\n",
+       " 'classifier__learning_rate': 0.001,\n",
+       " 'classifier__max_depth': 50,\n",
+       " 'classifier__max_leaves': 0,\n",
+       " 'classifier__n_estimators': 50,\n",
+       " 'classifier__subsample': 0.8}"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2650,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2669,7 +2699,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "b69ba6b0-2241-4ac2-9736-053612251ffd",
+       "ref": "7a618758-1f1a-475c-abe5-1f11835a5235",
        "rows": [
         [
          "2190",
@@ -2685,11 +2715,11 @@
         ],
         [
          "2193",
-         "0"
+         "1"
         ],
         [
          "2194",
-         "0"
+         "1"
         ],
         [
          "2195",
@@ -2717,7 +2747,7 @@
         ],
         [
          "2201",
-         "0"
+         "1"
         ],
         [
          "2202",
@@ -2729,11 +2759,11 @@
         ],
         [
          "2204",
-         "0"
+         "1"
         ],
         [
          "2205",
-         "0"
+         "1"
         ],
         [
          "2206",
@@ -2745,19 +2775,19 @@
         ],
         [
          "2208",
-         "0"
+         "1"
         ],
         [
          "2209",
-         "0"
+         "1"
         ],
         [
          "2210",
-         "0"
+         "1"
         ],
         [
          "2211",
-         "0"
+         "1"
         ],
         [
          "2212",
@@ -2773,11 +2803,11 @@
         ],
         [
          "2215",
-         "0"
+         "1"
         ],
         [
          "2216",
-         "0"
+         "1"
         ],
         [
          "2217",
@@ -2789,7 +2819,7 @@
         ],
         [
          "2219",
-         "0"
+         "1"
         ],
         [
          "2220",
@@ -2817,7 +2847,7 @@
         ],
         [
          "2226",
-         "0"
+         "1"
         ],
         [
          "2227",
@@ -2841,7 +2871,7 @@
         ],
         [
          "2232",
-         "0"
+         "1"
         ],
         [
          "2233",
@@ -2853,11 +2883,11 @@
         ],
         [
          "2235",
-         "0"
+         "1"
         ],
         [
          "2236",
-         "0"
+         "1"
         ],
         [
          "2237",
@@ -2865,7 +2895,7 @@
         ],
         [
          "2238",
-         "0"
+         "1"
         ],
         [
          "2239",
@@ -2918,11 +2948,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2193</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2194</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2959,8 +2989,8 @@
        "2190         1\n",
        "2191         1\n",
        "2192         1\n",
-       "2193         0\n",
-       "2194         0\n",
+       "2193         1\n",
+       "2194         1\n",
        "...        ...\n",
        "2915         1\n",
        "2916         1\n",
@@ -2971,7 +3001,7 @@
        "[730 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2988,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
