dont use gridsearch as dumbs down classifier, tbc

--- a/binary_rainfall_prediction/train.ipynb
+++ b/binary_rainfall_prediction/train.ipynb
@@ -132,7 +132,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "c7e601e0-4578-4aa2-913e-8bf5c6c17269",
+       "ref": "33f81828-5546-405c-9087-bdd0c982bb45",
        "rows": [
         [
          "0",
@@ -1205,7 +1205,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "462f667a-5621-4650-82cd-b93f61aa5cf8",
+       "ref": "909741c2-83e8-4f0f-a0c5-2b9f66e66894",
        "rows": [
         [
          "0",
@@ -1587,7 +1587,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "dcdb6b8a-0870-4c1b-a6bf-f17c3d390e6f",
+       "ref": "873b37fd-74ad-40f5-a356-8cafdf088e60",
        "rows": [
         [
          "0",
@@ -2573,14 +2573,14 @@
     {
      "data": {
       "text/plain": [
-       "count    5.000000\n",
-       "mean     0.870617\n",
-       "std      0.014476\n",
-       "min      0.856061\n",
-       "25%      0.857997\n",
-       "50%      0.867565\n",
-       "75%      0.885101\n",
-       "max      0.886364\n",
+       "count    3.000000\n",
+       "mean     0.866471\n",
+       "std      0.031034\n",
+       "min      0.848152\n",
+       "25%      0.848556\n",
+       "50%      0.848960\n",
+       "75%      0.875631\n",
+       "max      0.902303\n",
        "dtype: float64"
       ]
      },
@@ -2594,7 +2594,7 @@
     "    pipe,\n",
     "    train,\n",
     "    target,\n",
-    "    cv=StratifiedKFold(n_splits=5),\n",
+    "    cv=StratifiedKFold(n_splits=3),\n",
     "    scoring=\"roc_auc\",\n",
     "    n_jobs=2\n",
     ")\n",
@@ -2615,12 +2615,13 @@
     "cv_search = GridSearchCV(\n",
     "    estimator = pipe,\n",
     "    param_grid={\n",
-    "        'classifier__n_estimators':[10, 50, 100, 500],\n",
-    "        'classifier__max_depth':[10, 50, 100],\n",
-    "        'classifier__max_leaves':[0, 5, 10],\n",
-    "        'classifier__learning_rate':[1e-3, 5e-3, 10e-3],\n",
-    "        'classifier__subsample':[0.7, 0.8, 0.9],\n",
-    "        'classifier__colsample_bytree':[0.7, 0.8, 0.9],\n",
+    "        'classifier__n_estimators':[100, 500],\n",
+    "        # 'classifier__n_estimators':[10, 50, 100, 500],\n",
+    "        # 'classifier__max_depth':[10, 50, 100],\n",
+    "        # 'classifier__max_leaves':[0, 5, 10],\n",
+    "        # 'classifier__learning_rate':[1e-3, 5e-3, 10e-3],\n",
+    "        # 'classifier__subsample':[0.7, 0.8, 0.9],\n",
+    "        # 'classifier__colsample_bytree':[0.7, 0.8, 0.9],\n",
     "        # 'classifier__criterion':['squared_error', 'friedman_mse', 'poisson'],\n",
     "    },\n",
     "    scoring=\"roc_auc\",\n",
@@ -2640,8 +2641,233 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "1",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "834c33b2-1e5d-439f-9322-1a4f46d7bb6b",
+       "rows": [
+        [
+         "mean_fit_time",
+         "0.26479668617248536",
+         "0.2578609466552734"
+        ],
+        [
+         "std_fit_time",
+         "0.13169581100308697",
+         "0.028335327329202326"
+        ],
+        [
+         "mean_score_time",
+         "0.008976936340332031",
+         "0.010097789764404296"
+        ],
+        [
+         "std_score_time",
+         "0.0009706410449609839",
+         "0.001790169068717453"
+        ],
+        [
+         "param_classifier__n_estimators",
+         "100",
+         "500"
+        ],
+        [
+         "params",
+         "{'classifier__n_estimators': 100}",
+         "{'classifier__n_estimators': 500}"
+        ],
+        [
+         "split0_test_score",
+         "0.8560606060606061",
+         "0.8453703703703704"
+        ],
+        [
+         "split1_test_score",
+         "0.8863636363636364",
+         "0.8783108866442199"
+        ],
+        [
+         "split2_test_score",
+         "0.8851010101010102",
+         "0.8826038159371493"
+        ],
+        [
+         "split3_test_score",
+         "0.867564534231201",
+         "0.8574214365881033"
+        ],
+        [
+         "split4_test_score",
+         "0.857996632996633",
+         "0.8484848484848485"
+        ],
+        [
+         "mean_test_score",
+         "0.8706172839506173",
+         "0.8624382716049382"
+        ],
+        [
+         "std_test_score",
+         "0.012947763668369984",
+         "0.015295548302084211"
+        ],
+        [
+         "rank_test_score",
+         "1",
+         "2"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 14
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean_fit_time</th>\n",
+       "      <td>0.264797</td>\n",
+       "      <td>0.257861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std_fit_time</th>\n",
+       "      <td>0.131696</td>\n",
+       "      <td>0.028335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean_score_time</th>\n",
+       "      <td>0.008977</td>\n",
+       "      <td>0.010098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std_score_time</th>\n",
+       "      <td>0.000971</td>\n",
+       "      <td>0.00179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>param_classifier__n_estimators</th>\n",
+       "      <td>100</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>params</th>\n",
+       "      <td>{'classifier__n_estimators': 100}</td>\n",
+       "      <td>{'classifier__n_estimators': 500}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>split0_test_score</th>\n",
+       "      <td>0.856061</td>\n",
+       "      <td>0.84537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>split1_test_score</th>\n",
+       "      <td>0.886364</td>\n",
+       "      <td>0.878311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>split2_test_score</th>\n",
+       "      <td>0.885101</td>\n",
+       "      <td>0.882604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>split3_test_score</th>\n",
+       "      <td>0.867565</td>\n",
+       "      <td>0.857421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>split4_test_score</th>\n",
+       "      <td>0.857997</td>\n",
+       "      <td>0.848485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <td>0.870617</td>\n",
+       "      <td>0.862438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std_test_score</th>\n",
+       "      <td>0.012948</td>\n",
+       "      <td>0.015296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rank_test_score</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "np.float64(0.8915123456790124)"
+       "                                                                0  \\\n",
+       "mean_fit_time                                            0.264797   \n",
+       "std_fit_time                                             0.131696   \n",
+       "mean_score_time                                          0.008977   \n",
+       "std_score_time                                           0.000971   \n",
+       "param_classifier__n_estimators                                100   \n",
+       "params                          {'classifier__n_estimators': 100}   \n",
+       "split0_test_score                                        0.856061   \n",
+       "split1_test_score                                        0.886364   \n",
+       "split2_test_score                                        0.885101   \n",
+       "split3_test_score                                        0.867565   \n",
+       "split4_test_score                                        0.857997   \n",
+       "mean_test_score                                          0.870617   \n",
+       "std_test_score                                           0.012948   \n",
+       "rank_test_score                                                 1   \n",
+       "\n",
+       "                                                                1  \n",
+       "mean_fit_time                                            0.257861  \n",
+       "std_fit_time                                             0.028335  \n",
+       "mean_score_time                                          0.010098  \n",
+       "std_score_time                                            0.00179  \n",
+       "param_classifier__n_estimators                                500  \n",
+       "params                          {'classifier__n_estimators': 500}  \n",
+       "split0_test_score                                         0.84537  \n",
+       "split1_test_score                                        0.878311  \n",
+       "split2_test_score                                        0.882604  \n",
+       "split3_test_score                                        0.857421  \n",
+       "split4_test_score                                        0.848485  \n",
+       "mean_test_score                                          0.862438  \n",
+       "std_test_score                                           0.015296  \n",
+       "rank_test_score                                                 2  "
       ]
      },
      "execution_count": 13,
@@ -2650,7 +2876,7 @@
     }
    ],
    "source": [
-    "cv_search.best_score_"
+    "pd.DataFrame(cv_search.cv_results_).T"
    ]
   },
   {
@@ -2661,15 +2887,30 @@
     {
      "data": {
       "text/plain": [
-       "{'classifier__colsample_bytree': 0.7,\n",
-       " 'classifier__learning_rate': 0.001,\n",
-       " 'classifier__max_depth': 50,\n",
-       " 'classifier__max_leaves': 0,\n",
-       " 'classifier__n_estimators': 50,\n",
-       " 'classifier__subsample': 0.8}"
+       "np.float64(0.8706172839506173)"
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_search.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'classifier__n_estimators': 100}"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2680,7 +2921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2693,13 +2934,13 @@
          "type": "integer"
         },
         {
-         "name": "num_sold",
+         "name": "rainfall",
          "rawType": "int64",
          "type": "integer"
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "7a618758-1f1a-475c-abe5-1f11835a5235",
+       "ref": "fb0cf173-7b4e-4e8e-8ea5-3f8c7bbe61b1",
        "rows": [
         [
          "2190",
@@ -2715,11 +2956,11 @@
         ],
         [
          "2193",
-         "1"
+         "0"
         ],
         [
          "2194",
-         "1"
+         "0"
         ],
         [
          "2195",
@@ -2747,7 +2988,7 @@
         ],
         [
          "2201",
-         "1"
+         "0"
         ],
         [
          "2202",
@@ -2759,11 +3000,11 @@
         ],
         [
          "2204",
-         "1"
+         "0"
         ],
         [
          "2205",
-         "1"
+         "0"
         ],
         [
          "2206",
@@ -2775,19 +3016,19 @@
         ],
         [
          "2208",
-         "1"
+         "0"
         ],
         [
          "2209",
-         "1"
+         "0"
         ],
         [
          "2210",
-         "1"
+         "0"
         ],
         [
          "2211",
-         "1"
+         "0"
         ],
         [
          "2212",
@@ -2803,11 +3044,11 @@
         ],
         [
          "2215",
-         "1"
+         "0"
         ],
         [
          "2216",
-         "1"
+         "0"
         ],
         [
          "2217",
@@ -2819,7 +3060,7 @@
         ],
         [
          "2219",
-         "1"
+         "0"
         ],
         [
          "2220",
@@ -2847,7 +3088,7 @@
         ],
         [
          "2226",
-         "1"
+         "0"
         ],
         [
          "2227",
@@ -2871,7 +3112,7 @@
         ],
         [
          "2232",
-         "1"
+         "0"
         ],
         [
          "2233",
@@ -2883,11 +3124,11 @@
         ],
         [
          "2235",
-         "1"
+         "0"
         ],
         [
          "2236",
-         "1"
+         "0"
         ],
         [
          "2237",
@@ -2895,7 +3136,7 @@
         ],
         [
          "2238",
-         "1"
+         "0"
         ],
         [
          "2239",
@@ -2926,7 +3167,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>num_sold</th>\n",
+       "      <th>rainfall</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id</th>\n",
@@ -2948,11 +3189,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2193</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2194</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2984,13 +3225,13 @@
        "</div>"
       ],
       "text/plain": [
-       "      num_sold\n",
+       "      rainfall\n",
        "id            \n",
        "2190         1\n",
        "2191         1\n",
        "2192         1\n",
-       "2193         1\n",
-       "2194         1\n",
+       "2193         0\n",
+       "2194         0\n",
        "...        ...\n",
        "2915         1\n",
        "2916         1\n",
@@ -3001,7 +3242,7 @@
        "[730 rows x 1 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3010,7 +3251,7 @@
     "sub_df = pd.DataFrame(\n",
     "    index=test.index,\n",
     "    data={\n",
-    "        'num_sold':cv_search.predict(test)\n",
+    "        'rainfall':cv_search.predict(test)\n",
     "    }\n",
     ")\n",
     "sub_df    \n"
@@ -3018,7 +3259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3026,6 +3267,13 @@
     "    sub_df.to_csv(\"/kaggle/working/submission.csv\")\n",
     "    !head /kaggle/working/submission.csv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
