add index to csv

--- a/binary_rainfall_prediction/train.ipynb
+++ b/binary_rainfall_prediction/train.ipynb
@@ -12787,7 +12787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -13113,7 +13113,8 @@
     "    index=test.index,\n",
     "    data={\n",
     "        'rainfall':cv_search.predict(test)\n",
-    "    }\n",
+    "    },\n",
+    "    index_label='id',\n",
     ")\n",
     "sub_df    \n"
    ]
