put index id proper

--- a/binary_rainfall_prediction/train.ipynb
+++ b/binary_rainfall_prediction/train.ipynb
@@ -13114,19 +13114,18 @@
     "    data={\n",
     "        'rainfall':cv_search.predict(test)\n",
     "    },\n",
-    "    index_label='id',\n",
     ")\n",
     "sub_df    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "if KAGGLE_RUN:\n",
-    "    sub_df.to_csv(\"/kaggle/working/submission.csv\")\n",
+    "    sub_df.to_csv(\"/kaggle/working/submission.csv\", index_label='id')\n",
     "    !head /kaggle/working/submission.csv"
    ]
   },
